@@ -1,5 +1,5 @@
 /*
- * Copyright © 2018-2021, Commonwealth Scientific and Industrial Research
+ * Copyright © 2018-2022, Commonwealth Scientific and Industrial Research
  * Organisation (CSIRO) ABN 41 687 119 230. Licensed under the CSIRO Open Source
  * Software Licence Agreement.
  */
@@ -12,15 +12,19 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.when;
 
-import au.csiro.pathling.io.ResourceReader;
+import au.csiro.pathling.QueryHelpers;
+import au.csiro.pathling.encoders.FhirEncoders;
+import au.csiro.pathling.fhir.FhirServer;
+import au.csiro.pathling.io.Database;
+import io.delta.tables.DeltaTable;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.StringWriter;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.Arrays;
-import java.util.HashSet;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Objects;
 import java.util.Set;
 import javax.annotation.Nonnull;
@@ -30,7 +34,7 @@ import org.apache.spark.sql.Dataset;
 import org.apache.spark.sql.Row;
 import org.apache.spark.sql.SparkSession;
 import org.hl7.fhir.r4.model.Enumerations.ResourceType;
-import org.mockito.stubbing.OngoingStubbing;
+import org.springframework.http.MediaType;
 
 /**
  * @author John Grimes
@@ -39,6 +43,8 @@ public abstract class TestHelpers {
 
   public static final String LOINC_URL = "http://loinc.org";
   public static final String SNOMED_URL = "http://snomed.info/sct";
+  public static final String PARQUET_PATH = "src/test/resources/test-data/parquet";
+  public static final MediaType FHIR_MEDIA_TYPE = new MediaType("application", "fhir+json");
 
   @Nonnull
   private static ClassLoader getClassLoader() {
@@ -71,48 +77,76 @@ public abstract class TestHelpers {
     }
   }
 
-  @Nonnull
-  public static OngoingStubbing<Set<ResourceType>> mockAvailableResourceTypes(
-      @Nonnull final ResourceReader mockReader, @Nonnull final ResourceType... types) {
-    return when(mockReader.getAvailableResourceTypes())
-        .thenReturn(new HashSet<>(Arrays.asList(types)));
-  }
-
-  public static void mockResourceReader(@Nonnull final ResourceReader mockReader,
+  public static void mockResource(@Nonnull final Database database,
       @Nonnull final SparkSession spark, @Nonnull final ResourceType... resourceTypes) {
     for (final ResourceType resourceType : resourceTypes) {
       final Dataset<Row> dataset = getDatasetForResourceType(spark, resourceType);
-      when(mockReader.read(resourceType)).thenReturn(dataset);
-      when(mockReader.getAvailableResourceTypes())
-          .thenReturn(new HashSet<>(Arrays.asList(resourceTypes)));
+      when(database.read(resourceType)).thenReturn(dataset);
     }
   }
 
-  public static void mockResourceReader(@Nonnull final ResourceReader mockReader,
+  public static void mockResource(@Nonnull final Database database,
       @Nonnull final SparkSession spark, final int numPartitions,
       @Nonnull final ResourceType... resourceTypes) {
     for (final ResourceType resourceType : resourceTypes) {
       Dataset<Row> dataset = getDatasetForResourceType(spark, resourceType);
       dataset = dataset.repartition(numPartitions);
-      when(mockReader.read(resourceType)).thenReturn(dataset);
-      when(mockReader.getAvailableResourceTypes())
-          .thenReturn(new HashSet<>(Arrays.asList(resourceTypes)));
+      when(database.read(resourceType)).thenReturn(dataset);
+    }
+  }
+
+  public static void mockResource(@Nonnull final Database database,
+      @Nonnull final SparkSession spark, @Nonnull final ResourceType resourceType,
+      @Nonnull final String parquetPath) {
+    final Dataset<Row> dataset = getDatasetFromParquetFile(spark, parquetPath);
+    when(database.read(resourceType)).thenReturn(dataset);
+  }
+
+  public static void mockEmptyResource(@Nonnull final Database database,
+      @Nonnull final SparkSession spark, @Nonnull final FhirEncoders fhirEncoders,
+      @Nonnull final ResourceType... resourceTypes) {
+    for (final ResourceType resourceType : resourceTypes) {
+      final Dataset<Row> dataset = QueryHelpers.createEmptyDataset(spark, fhirEncoders,
+          resourceType);
+      when(database.read(resourceType)).thenReturn(dataset);
+    }
+  }
+
+  public static void mockAllEmptyResources(@Nonnull final Database database,
+      @Nonnull final SparkSession spark, @Nonnull final FhirEncoders fhirEncoders) {
+    final Set<ResourceType> resourceTypes = FhirServer.supportedResourceTypes();
+    for (final ResourceType resourceType : resourceTypes) {
+      final Dataset<Row> dataset = QueryHelpers.createEmptyDataset(spark, fhirEncoders,
+          resourceType);
+      when(database.read(resourceType)).thenReturn(dataset);
     }
   }
 
   @Nonnull
-  private static Dataset<Row> getDatasetForResourceType(@Nonnull final SparkSession spark,
+  public static Dataset<Row> getDatasetForResourceType(@Nonnull final SparkSession spark,
       @Nonnull final ResourceType resourceType) {
-    final File parquetFile =
-        new File("src/test/resources/test-data/parquet/" + resourceType.toCode() + ".parquet");
+    return getDatasetFromParquetFile(spark,
+        getParquetPathForResourceType(resourceType));
+  }
+
+  @Nonnull
+  public static String getParquetPathForResourceType(final @Nonnull ResourceType resourceType) {
+    return PARQUET_PATH + "/" + resourceType.toCode() + ".parquet";
+  }
+
+  @Nonnull
+  public static Dataset<Row> getDatasetFromParquetFile(@Nonnull final SparkSession spark,
+      @Nonnull final String parquetPath) {
+    final File parquetFile = new File(parquetPath);
     @Nullable final URL parquetUrl;
     try {
-      parquetUrl = parquetFile.getAbsoluteFile().toURI().toURL();
+      parquetUrl = new URL("file://" + parquetFile.getAbsoluteFile().toPath());
     } catch (final MalformedURLException e) {
-      throw new RuntimeException("Problem getting dataset for resource type", e);
+      throw new RuntimeException("Problem getting dataset", e);
     }
     assertNotNull(parquetUrl);
-    @Nullable final Dataset<Row> dataset = spark.read().parquet(parquetUrl.toString());
+    final String decodedUrl = URLDecoder.decode(parquetUrl.toString(), StandardCharsets.UTF_8);
+    @Nullable final Dataset<Row> dataset = DeltaTable.forPath(spark, decodedUrl).toDF();
     assertNotNull(dataset);
     return dataset;
   }
